--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -89,10 +89,8 @@ h6 {
     cursor: pointer;
   }
   .button.small {
-    width : 88px;
     height : 33px;
     font-size : 12px;
-    line-height : 33px;
     -moz-border-radius : 16px;
     -webkit-border-radius : 16px;
     border-radius : 16px;
@@ -101,7 +99,6 @@ h6 {
     width : 111px;
     height : 40px;
     font-size : 14px;
-    line-height : 40px;
     -moz-border-radius : 20px;
     -webkit-border-radius : 20px;
     border-radius : 20px;
@@ -110,7 +107,6 @@ h6 {
     width : 152px;
     height : 52px;
     font-size : 20px;
-    line-height : 52px;
     -moz-border-radius : 26px;
     -webkit-border-radius : 26px;
     border-radius : 26px;
@@ -214,6 +210,7 @@ a {
       height: 43px;
   }
   .b-menu__wrapp {
+    padding: 0 10px;
   }
   .b-menu__wrapp-logo {
     display: inline-block;
@@ -247,9 +244,11 @@ a {
         color: #403D39;
       }
   .b-menu__wrapp-login.text.bold {
+    margin-right: 10px;
     padding-left: 20px !important;
     color: #187900;
     font-size: 14px;
+    line-height : 33px;
     background-image: url('../img/icon-login.svg');
     background-color: #ABE766;
     background-position: 10px center;
@@ -260,9 +259,50 @@ a {
       background-color: #8fdf33;
       color: #1c8d00;
     }
+    .b-menu__wrapp-login-popup {
+      position: absolute;
+      display: flex;
+      top: 0;
+      right: 0;
+      left: 0;
+      opacity: 0;
+      pointer-events: none;
+      background-color: rgba(0,0,0,0.5);
+      width: 100%;
+      height: 100vh;
+      -webkit-transition: opacity 0.2s ease;
+      transition: opacity 0.2s ease;
+    }
+      .m-open-popap.b-menu__wrapp-login-popup {
+        opacity: 1;
+        pointer-events: auto;
+      }
+      .b-menu__wrapp-login-popup-window {
+        position: relative;
+        margin: auto;
+        height: 600px;
+        width: 600px;
+        background-color: #FFFFFF;
+        border-radius: 4px;
+      }
+        .b-menu__wrapp-login-popup-window-close {
+          position: absolute;
+          top: 20px;
+          right: 20px;
+          width: 30px;
+          height: 30px;
+          outline: none;
+          border: none;
+          background-color: #336BCE;
+          background-image: url('../img/icon-button-close.svg');
+          background-size: contain;
+          background-position: center;
+          background-repeat: no-repeat;
+          cursor: pointer;
+        }
 
 main {
-  padding: 35px 0;
+  padding: 20px 0 0;
   margin-top: 86px;
   background-color: #F7F7F7;
 }
@@ -271,14 +311,135 @@ main {
     margin: 0 auto;
   }
   section {
+    display: flex !important;
+    display: -webkit-flex !important;
+    margin-bottom: 20px;
   }
   section .block {
-    padding: 30px 20px;
+    display: -webkit-flex;
+    display: flex;
+    position: relative;
+    width: 100%;
+    padding: 30px 20px 40px;
     background : #FFFFFF;
     -moz-border-radius : 4px;
     -webkit-border-radius : 4px;
     border-radius : 4px;
   }
+
+    .dropdown-block {
+      position: absolute;
+      top: 40px;
+      right: 20px;
+    }
+      .dropdown-block-current {
+        position: relative;
+        padding-right: 20px;
+        font-size: 16px;
+        font-weight: bold;
+        text-align: right;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+        cursor: pointer;
+      }
+        .dropdown-block-current:after {
+          position: absolute;
+          top: 50%;
+          right: 0;
+          margin-top: -6px;
+          display: block;
+          content: '';
+          width: 9px;
+          height: 16px;
+          background-image: url('../img/icon-date-arrow.svg');
+          background-position: center;
+          background-size: contain;
+          background-repeat: no-repeat;
+          -webkit-transition: background-image 0.25s ease;
+          transition: background-image 0.25s ease;
+        }
+          .m-open-dropdown.dropdown-block-current:after {
+            transform: rotate(180deg);
+            background-image: url('../img/icon-date-arrow.svg');
+          }
+      .dropdown-block-list {
+        position: relative;
+        top: 10px;
+        right: -25px;
+        padding: 8px;
+        opacity: 0;
+        -webkit-transform: translate3d(0, -20px, 0);
+        transform: translate3d(0, -20px, 0);
+        visibility: hidden;
+        pointer-events: none;
+        background-color: #F7F7F7;
+        border-radius: 4px;
+        -webkit-transition: opacity 0.2s ease,
+                            -webkit-transform 0.25s ease;
+        transition: opacity 0.2s ease,
+                    transform 0.25s ease;
+        z-index: 3;
+      }
+        .dropdown-block-list:after {
+          position: absolute;
+          display: block;
+          top: -20px;
+          right: 20px;
+          content: '';
+          border: 10px solid transparent;
+          border-top: 10px solid transparent;
+          border-bottom: 10px solid #F7F7F7;
+        }
+      .m-open-dropdown.dropdown-block-current + .dropdown-block-list {
+        opacity: 1;
+        visibility: visible;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+        pointer-events: auto;
+        box-shadow: 0 2px 2px rgba(0,0,0,0.5);
+      }
+        .dropdown-block-list li {
+          line-height: 30px;
+        }
+          .dropdown-block-list li a {
+            font-family: Open Sans;
+            font-size: 14px;
+            color: #333333;
+          }
+            .dropdown-block-list li a:hover {
+              color: #787878;
+            }
+
+.l-footer {
+  height: 75px;
+  width: 100%;
+  background-color: #FFFFFF;
+}
+  .l-footer .wrapper {
+    display: -webkit-flex;
+    display: flex;
+    height: 100%;
+    -webkit-align-items: center;
+    align-items: center;
+    padding: 0 10px;
+  }
+    .l-footer nav,
+    .l-footer ul {
+      width:  100%;
+    }
+    .l-footer ul li {
+      display: inline-block;
+      margin-right: 20px;
+    }
+    .l-footer ul li:last-child {
+      float: right;
+    }
+    .b-footer-link {
+    }
+      .b-footer-link:hover {
+        color: #020202;
+      }
 
 
 
