--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -302,13 +302,13 @@ a {
         }
 
 main {
-  min-width: 1180px;
+  min-width: 960px;
   padding: 20px 0 0;
   margin-top: 86px;
   background-color: #F7F7F7;
 }
   .wrapper {
-    width: 1180px;
+    max-width:1180px;
     margin: 0 auto;
   }
   section {
@@ -441,6 +441,11 @@ main {
       .b-footer-link:hover {
         color: #020202;
       }
-
+@media (max-width: 1100px) {
+  .b-menu__wrapp-login.text.bold {
+      background-position: 10px center;
+      background-size: 10px 16px;
+  }
+}
 
 
