--- a/www/css/styles-main.css
+++ b/www/css/styles-main.css
@@ -158,7 +158,7 @@
       .b-content__lider-previous-item {
         display: inline-block;
         height: 252px;
-        width: 350px;
+        width: calc(50% - 10px);
         border-radius: 4px;
         overflow: hidden;
       }
@@ -167,7 +167,7 @@
         }
         .b-content__lider-previous-item img {
           height: 252px;
-          width: 350px;
+          width: 100%;
           object-fit: cover;
         }
     .b-content__lider-gaining {
@@ -180,21 +180,13 @@
       .b-content__lider-gaining-item,
       .b-content__lider-promote-item {
         display: inline-block;
-        height: 136px;
-        padding: 8px;
-        width: 25%;
-        border-radius: 4px;
-        border: 1px solid transparent;
-        -webkit-transition: border 0.2s ease;
-        transition: border 0.2s ease;
+        height: 120px;
+        margin: 0 8px 0 0;
+        width: calc(25% - 6px);
       }
-        .b-content__lider-gaining-item:hover,
-        .b-content__lider-promote-item:hover {
-          border: 1px solid #CECECE;
-        }
-        .b-content__lider-gaining-item:first-child,
-        .b-content__lider-promote-item:first-child {
-          margin-left: 0px;
+        .b-content__lider-gaining-item:last-child,
+        .b-content__lider-promote-item:last-child {
+          margin-right: 0px;
         }
          .b-content__lider-gaining-item img,
          .b-content__lider-promote-item img {
@@ -323,30 +315,25 @@
   }
     .b-new-auto__container {
       font-size: 0;
+      margin: 0 -4px;
     }
+    
       .b-new-auto__item {
         display: inline-block;
         vertical-align: top;
-        width: 186px;
-        padding: 8px 8px 35px;
-        border-radius: 4px;
-        border: 1px solid transparent;
-        -webkit-transition: border 0.2s ease;
-        transition: border 0.2s ease;
+        width: calc(16.66667% - 8px);
+        margin: 0 4px;
+        padding-bottom: 35px;
       }
-        .b-new-auto__item:hover {
-          border: 1px solid #CECECE;
-        }
         .b-new-auto__item img {
           height: 120px;
-          width: 170px;
+          width: 100%;
           margin-bottom: 15px;
           object-fit: cover;
           border-radius: 4px;
         }
         .b-new-auto__item-name,
         .b-new-auto__item-auto {
-          max-width: 170px;
           font-family : Open Sans;
           font-size : 14px;
           line-height : 23px;
@@ -390,3 +377,8 @@
         color: #FFFFFF;
         background-color: #1C5BC9;
       }
+@media (max-width: 1100px) {
+  .b-new-auto__item {
+    width:  calc(20% - 8px);
+  }
+}
