--- a/www/css/styles-main.css
+++ b/www/css/styles-main.css
@@ -1,3 +1,8 @@
+section {
+  display: flex !important;
+  display: -webkit-flex !important;
+}
+
 .l-appeal {
   margin-left: 8.333333%;
   padding: 20px 0 45px;
