--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -5,45 +5,46 @@
     url('../fonts/MyriadProRegular.woff') format('woff'),
     url('../fonts/MyriadProRegular.ttf') format('truetype'),
 }
-
+html {
+  font-size: 20px;
+}
 /* Header styles */
 h1 {
   font-family: 'Open Sans', sans-serif;
-  font-size : 72px;
-  line-height : 79px;
+  font-size : 3.6rem;
+  line-height : 1.1em;
   color : #333333;
 }
 h2 {
   font-family: 'Open Sans', sans-serif;;
-  font-size : 36px;
-  line-height : 45px;
+  font-size : 1.8rem;
+  line-height : 1.25em;
   color : #333333;
 }
 h3 {
   font-family: 'Open Sans', sans-serif;;
-  font-size : 28px;
-  line-height : 41px;
+  font-size : 1.4rem;
+  line-height : 1.5em;
   color : #333333;
 }
 h4 {
   font-family: 'Open Sans', sans-serif;;
   font-weight : bold;
-  font-size : 24px;
-  line-height : 29px;
+  font-size : 1.2rem;
+  line-height : 1.25em;
   color : #333333;
-  color : rgb(51, 51, 51);
 }
 h5 {
   font-family: 'Open Sans', sans-serif;;
   font-weight : bold;
-  font-size : 16px;
-  line-height : 22px;
+  font-size : 0.8rem;
+  line-height : 1.38;
   color : #333333;
 }
 h6 {
   font-family: 'Open Sans', sans-serif;;
-  font-size : 14px;
-  line-height : 16px;
+  font-size : 0.7rem;
+  line-height : 1.15em;
   text-transform : uppercase;
   color : #333333;
 }
@@ -51,26 +52,27 @@ h6 {
 /* Text styles */
 .text {
   font-family: 'Open Sans', sans-serif;;
-  font-size : 14px;
-  line-height : 20px;
+  font-size : 0.7rem;
+  line-height : 1.42em;
   color : #333333;
 }
   .text.bold {
     font-weight : bold;
   }
   .text.subtext {
-    font-size : 12px;
-    line-height : 16px;
+    font-size : 0.6rem;
+    line-height : 0.75em;
   }
     .text.subtext.bold {
       font-weight : bold;
-      line-height : 16px;
+      line-height : 1.33em;
       color : #1C5BC9;
     }
 
 /* Buttons */
 .button,
 input[type='submit'].button {
+  -webkit-appearance: none;
   display: block;
   outline: none;
   border: none;
@@ -91,8 +93,8 @@ input[type='submit'].button {
     cursor: pointer;
   }
   .button.small {
-    height : 33px;
-    font-size : 12px;
+    height : 32px;
+    font-size : 0.6rem;
     -moz-border-radius : 16px;
     -webkit-border-radius : 16px;
     border-radius : 16px;
@@ -100,7 +102,7 @@ input[type='submit'].button {
   .button.middle {
     width : 111px;
     height : 40px;
-    font-size : 14px;
+    font-size : 0.7rem;
     -moz-border-radius : 20px;
     -webkit-border-radius : 20px;
     border-radius : 20px;
@@ -108,7 +110,7 @@ input[type='submit'].button {
   .button.big {
     width : 152px;
     height : 52px;
-    font-size : 20px;
+    font-size : 1rem;
     -moz-border-radius : 26px;
     -webkit-border-radius : 26px;
     border-radius : 26px;
@@ -121,8 +123,8 @@ input:not([type="submit"]) {
   padding: 7px 18px;
   font-family: 'Open Sans', sans-serif;;
   font-weight : bold;
-  font-size : 14px;
-  line-height : 20px;
+  font-size : 0.7rem;
+  line-height : 1rem;
   color : #333333;
   background : #F0F0F0;
   outline: none;
@@ -143,32 +145,29 @@ input:not([type="submit"]) {
   input::-moz-placeholder     {text-overflow:ellipsis;}
   input:-ms-input-placeholder {text-overflow:ellipsis;}
   input::-webkit-input-placeholder {
-    color:#c0392b;
+    color:#B7B7B7;
     opacity: 1; 
     transition: opacity 0.3s ease;
   }
   input::-moz-placeholder {
-    color:#c0392b;
+    color: #B7B7B7;
     opacity: 1;
     transition: opacity 0.3s ease;
   }
   input:-ms-input-placeholder  {
-    color:#c0392b;
+    color: #B7B7B7;
     opacity: 1;
     transition: opacity 0.3s ease;
   }
   input:focus::-webkit-input-placeholder {
-    color:#c0392b;
     opacity: 0;
     transition: opacity 0.3s ease;
   }
   input:focus::-moz-placeholder {
-    color:#c0392b;
     opacity: 0;
     transition: opacity 0.3s ease;
   }
   input:focus:-ms-input-placeholder {
-    color:#c0392b;
     opacity: 0;
     transition: opacity 0.3s ease;
   }
@@ -217,6 +216,7 @@ a {
     position: relative;
     padding: 0 10px;
   }
+  
   .b-menu__wrapp-logo {
     display: inline-block;
     width: 185px;
@@ -236,7 +236,7 @@ a {
   }
     .b-menu__wrapp-list li {
       display: inline-block;
-      flex:  1;
+      flex: 1;
       text-align: center;
     }
     .b-menu__wrapp-list li:last-child {
@@ -250,22 +250,23 @@ a {
       }
   .b-menu__wrapp-login.text.bold {
     margin-right: 10px;
-    padding-left: 20px !important;
+    padding-left: 20px;
     color: #187900;
-    font-size: 14px;
-    line-height : 33px;
+    font-size: 0.7rem;
     background-image: url('../img/icon-login.svg');
     background-color: #ABE766;
-    background-position: 10px center;
-    background-size: 14px 16px;
+    background-position: 0.7em center;
+    background-size: 0.7rem 0.8rem;
     background-repeat: no-repeat;
   }
     .b-menu__wrapp-login.text.bold:hover {
-      background-color: #8fdf33;
-      color: #1c8d00;
+      background-color: #8FDF33;
+      color: #1C8D00;
     }
   .b-menu__wrapp-login-nav {
+    display: -webkit-flex;
     display: flex;
+    -webkit-align-items: center;
     align-items: center;
     position: relative;
     cursor: pointer;
@@ -273,7 +274,7 @@ a {
     .b-menu__wrapp-login-nav:after {
       position: absolute;
       top: 50%;
-      right: -15px;
+      right: 0;
       margin-top: -6px;
       display: block;
       content: '';
@@ -293,18 +294,19 @@ a {
     .b-menu__wrapp-login-nav-photo {
       width: 42px;
       height: 42px;
-      margin-right: 10px;
+      margin-right: 5px;
       border-radius: 50%;
       object-fit: cover;
     }
     .b-menu__wrapp-login-nav-name {
+      padding-right: 15px;
       color: rgba(51,51,51,0.5);
     }
     .b-menu__wrapp-login-popup {
       position: absolute;
       top: 95px;
       right: 20px;
-      height: 220px;
+      height: 315px;
       width: 300px;
       padding: 30px 20px;
       -webkit-transform: translate3d(50px, 0, 0);
@@ -327,29 +329,23 @@ a {
       }
       .b-menu__wrapp-login-popup-close {
         position: absolute;
-        top:  -10px;
-        right:  -10px;
-        height: 20px;
-        width:  20px;
+        top:  10px;
+        right:  10px;
+        height: 15px;
+        width:  15px;
         background-color: #FFFFFF;
-        border-radius: 50%;
+        background-image: url('../img/icon-button-close.svg');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
         cursor: pointer;
       }
-        .b-menu__wrapp-login-popup-close:after {
-          position: absolute;
-          display: block;
-          content: '';
-          top: 0;
-          left: 0;
-          height: 20px;
-          width: 20px;
-          background-color: red;
-          background-image: url('../img/icon-button-close.svg');
-          background-size: 12px 12px;
-          background-position: center;
-          background-repeat: no-repeat;
-          border-radius: 50%;
-        }
+      .b-menu__wrapp-login-popup h3,
+      .b-menu__wrapp-register-popup-window h3 {
+        color: #0038A8;
+        text-align: center;
+        margin-bottom: 10px;
+      }
       .b-menu__wrapp-login-popup-enter {
       }
         .b-menu__wrapp-login-popup-enter input {
@@ -357,11 +353,17 @@ a {
           margin-bottom: 20px;
         }
         .b-menu__wrapp-login-popup-enter .button.middle {
+          margin-bottom: 25px;
           width: 48%;
           display: inline-block;
         }
-        .b-menu__wrapp-login-popup-enter .button:last-child {
-          float: right;
+        .b-menu__wrapp-login-popup-enter .button-registration {
+          height: 40px;
+          line-height: 40px;
+          cursor: pointer;
+          width: 48%;
+          text-align: right;
+          display: inline-block;
         }
     /* Попап регистрации */
     .b-menu__wrapp-register-popup {
@@ -386,8 +388,8 @@ a {
       .b-menu__wrapp-register-popup-window {
         position: relative;
         margin: auto;
-        width: 500px;
-        height: 500px;
+        width: 400px;
+        height: 480px;
         padding: 30px;
         background-color: #FFFFFF;
         border-radius: 4px;
@@ -404,14 +406,81 @@ a {
           }
           .b-menu__wrapp-register-popup-window-register label {
             padding: 0 30px;
+            position: relative;
+            cursor: pointer;
+            display: block;
+            padding-left: 0;
+            }
+
+        .b-menu__wrapp-register-popup-window-register input[type='radio'] + span:before {
+          display: block;
+          position: absolute;
+          top: 12px;
+          left: 0;
+          content: '';
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          border: 2px solid rgba(0,0,0,0.5);
+          background-color: #FFFFFF;
+          opacity: 0.5;
           }
-          
+
+        .b-menu__wrapp-register-popup-window-register input[type='radio'] {
+          visibility: hidden;
+          width: 0;
+          }
+
+        .b-menu__wrapp-register-popup-window-register span {
+          padding-left: 15px;
+          opacity: 0.5;
+          transition: opacity .1s ease;
+          -webkit-transition: opacity .1s ease;
+          }
+
+       .b-menu__wrapp-register-popup-window-register span:hover {
+          opacity: 1;
+          transition: opacity .1s ease;
+          -webkit-transition: opacity .1s ease;
+          }
+
+        .b-menu__wrapp-register-popup-window-register input[type='radio']:checked + span,
+        .b-menu__wrapp-register-popup-window-register input[type='radio']:checked + span:before{
+          opacity: 1;
+          transition: opacity .1s ease;
+          -webkit-transition: opacity .1s ease;
+          }
+
+        .b-menu__wrapp-register-popup-window-register input[type='radio']:checked + span:before{
+          text-align: center;
+          border: 2px solid rgba(0,0,0,0.5);
+          border-radius: 50%;
+          background-color: #FFFFFF;
+          line-height: 9px;
+          transition: border-color .1s ease;
+          -webkit-transition: border-color .1s ease;
+          }
+         .b-menu__wrapp-register-popup-window-register input[type='radio']:checked + span:after {
+          position: absolute;
+          content: '';
+          top: 16px;
+          left: 4px;
+          width: 8px;
+          height: 8px;
+          border-radius: 50%;
+          background-color: rgba(0,0,0,0.8);
+         }
           .b-menu__wrapp-register-popup-window-register input[type="radio"] {
             position: relative;
             height: 25px;
             top: 7px;
             margin-right: 15px;
           }
+      .b-menu__wrapp-register-popup-window .b-menu__wrapp-login {
+        margin-top: 40px;
+        text-align: center;
+        cursor: pointer;
+      }
 
 main {
   min-width: 960px;
@@ -431,7 +500,7 @@ main {
     display: flex;
     position: relative;
     width: 100%;
-    padding: 30px 20px 40px;
+    padding: 30px 20px 30px;
     background : #FFFFFF;
     -moz-border-radius : 4px;
     -webkit-border-radius : 4px;
@@ -552,10 +621,36 @@ main {
         color: #020202;
       }
 @media (max-width: 1100px) {
+  .b-menu__wrapp-logo {
+    background-image: url('../img/logo-tablet.svg');
+  }
   .b-menu__wrapp-login.text.bold {
       background-position: 10px center;
-      background-size: 10px 16px;
+      background-size: 12px 14px;
   }
 }
+
+  @media (max-width: 768px) {
+    html {
+      font-size: 18px;
+    }
+    .wrapper {
+      max-width: 768px;
+    }
+    main,
+    .b-menu__wrapp {
+      min-width: 768px;
+    }
+    .b-menu__wrapp-login.text.bold {
+      padding: 0;
+      background-image: none;
+    }
+    .l-footer ul li {
+      margin-right: 7px;
+    }
+    .l-footer ul li .text {
+      font-size: 0.7rem;
+    }
+  }
 
 
